--- a/example/parser.conf
+++ b/example/parser.conf
@@ -3,7 +3,7 @@ filter {
     grok{
       keep_empty_captures => true
       patterns_dir => "/usr/share/logstash/config/conf.d/patterns"
-      match => {"message" => "%{NGINX_ACCESS} %{GREEDYDATA:par2}" }
+      match => {"message" => "<%{WORD:host}> <%{HTTPDATE:time_local}> <%{DATA:server_name}> <%{URIPROTO:scheme}> <%{DATA:request_uri}> <%{NUMBER:status:int}> <%{NOTSPACE:sent_http_location}> <%{DATA:request_filename}> <%{NOTSPACE:args}> <%{NUMBER:body_bytes_sent:int}> <%{IPV4:remote_addr}> <%{DATA:product_id}> <%{NUMBER:request_time:float}> <%{DATA:upstream_cache_status}> <%{DATA:user_agent}> <%{WORD:method} %{GREEDYDATA} HTTP/%{NUMBER:http_version}> <%{DATA:http_host}> <%{DATA:http_referer}> <%{DATA:customerid}> <%{DATA}> <%{IPV4:server_ip}> <%{DATA:server_location}>%{GREEDYDATA:part2}" }
       remove_field => ["message"]
     }  
   }
@@ -11,8 +11,8 @@ filter {
     grok{
       keep_empty_captures => true
       patterns_dir => "/usr/share/logstash/config/conf.d/patterns"
-      match => {"par2" => "<%{WORD:host}> <%{HTTPDATE:time_local}> <%{DATA:server_name}> <%{URIPROTO:scheme}> <%{DATA:request_uri}> <%{NUMBER:status:int}> <%{NOTSPACE:sent_http_location}> <%{DATA:request_filename}> <%{NOTSPACE:args}> <%{NUMBER:body_bytes_sent:int}> <%{IPV4:remote_addr}> <%{DATA:product_id}> <%{NUMBER:request_time:float}> <%{DATA:upstream_cache_status}> <%{DATA:user_agent}> <%{WORD:method} %{GREEDYDATA} HTTP/%{NUMBER:http_version}> <%{DATA:http_host}> <%{DATA:http_referer}> <%{DATA:customerid}> <%{DATA}> <%{IPV4:server_ip}> <%{DATA:server_location}>%{GREEDYDATA}" }
-      remove_field => ["par2"]
+      match => {"part2" => "%{NGINX_ACCESS} %{GREEDYDATA:part3}" }
+      remove_field => ["part2"]
     }  
   }
 }
