--- a/example/parser.conf
+++ b/example/parser.conf
@@ -1,18 +1,12 @@
 filter { 
-  if "_grokparsefailure" not in [tags] {
-    grok{
-      keep_empty_captures => true
-      patterns_dir => "/usr/share/logstash/config/conf.d/patterns"
-      match => {"message" => "<%{WORD:host}> <%{HTTPDATE:time_local}> <%{DATA:server_name}> <%{URIPROTO:scheme}> <%{DATA:request_uri}> <%{NUMBER:status:int}> <%{NOTSPACE:sent_http_location}> <%{DATA:request_filename}> <%{NOTSPACE:args}> <%{NUMBER:body_bytes_sent:int}> <%{IPV4:remote_addr}> <%{DATA:product_id}> <%{NUMBER:request_time:float}> <%{DATA:upstream_cache_status}> <%{DATA:user_agent}> <%{WORD:method} %{GREEDYDATA} HTTP/%{NUMBER:http_version}> <%{DATA:http_host}> <%{DATA:http_referer}> <%{DATA:customerid}> <%{DATA}> <%{IPV4:server_ip}> <%{DATA:server_location}>%{GREEDYDATA:part2}" }
-      remove_field => ["message"]
-    }  
-  }
-  if "_grokparsefailure" not in [tags] {
-    grok{
-      keep_empty_captures => true
-      patterns_dir => "/usr/share/logstash/config/conf.d/patterns"
-      match => {"part2" => "%{NGINX_ACCESS} %{GREEDYDATA:part3}" }
-      remove_field => ["part2"]
-    }  
+  if inclusion and exclusion {
+    if "_grokparsefailure" not in [tags] {
+      grok{
+      }  
+    }
+    if "_grokparsefailure" not in [tags] {
+      grok{
+      }  
+    }
   }
 }
