--- a/example/example.yaml
+++ b/example/example.yaml
@@ -56,7 +56,7 @@ spec:
         - mountPath: /var/run
           name: var-run
       - name: sidecar
-        image: vinhph2/sidecar
+        image: vngcloud/sidecar
         volumeMounts:
         - mountPath: /etc/nginx/conf.d # mount nginx-conf volumn to /etc/nginx/conf.d/
           name: nginx-conf
